# ScratchBrowser

./: .breakpoints  .replit  main.py  pyproject.toml
static/: a.css
templates/: assets.html  home.html  leaderboard.html  project.html  projectlist-new.html  projectlist.html  robots.txt  searchd.html  searchpage.html  user.html
