[tool.poetry]
name = "repl_python3_ScratchBrowser"
version = "69.69.69.420"
description = ""
authors = ["28klotlucas2"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
dominate = "^2.6.0"
Flask-Bootstrap = "^3.3.7"
flask-nav = "^0.6"
scratchclient = "^0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
